Fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ h2 {
 h2.title {
   font-size: calc(22px + 2vmin);
   padding-top: 20px;
-  padding-bottom: 100px;
+  padding-bottom: 60px;
 }
 
 h2.subtitle {
